# Immersed-Boundary

./: README.md
solvers/: Allwmake
solvers/IBM-2D-regular/: CMakeLists.txt  IB2DFoam.C  Interpolation.H  Spreading.H  createFields.H  createIBFields.H  inputData.H  liftCoeff.H
solvers/IBM-2D-regular/Make/: files  options
solvers/IBM-2D-regular/Make/linux64GccDPInt32Opt/: IB2DFoam.C.dep  IBFoam.C.dep  sourceFiles  variables
solvers/IBM-Solver/: CMakeLists.txt  IBFoam.C  baseFunction.H  inputData.H  liftCoeff2.H  meshSupportSearch.H
solvers/IBM-Solver/Make/: files
solvers/IBM-Solver/Make/linux64GccDPInt32Opt/: options  sourceFiles  variables
tutorials/cylinder/: Allclean  Allrun  Data.txt  ibmcylind_fluid.geo
tutorials/cylinder/0.orig/: U
tutorials/cylinder/system/: controlDict  decomposeParDict  fvSchemes
tutorials/move_cylinder/: Allrun  Paralist.txt  ibmcylind_fluid.geo
tutorials/move_cylinder/0.orig/: p
tutorials/move_cylinder/system/: changeDictionaryDict  controlDict  fvSolution  probes
